# portfolio

./: Makefile  docker-compose.yaml
pyloop_files/: mysql.Dockerfile  nginx.Dockerfile  python.Dockerfile
pyloop_files/src/: data.sql
pyloop_files/src/backend/: main.py  requirements.txt
pyloop_files/src/frontend/: index.html  scripts.js
react-django/: Dockerfile  Makefile  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.ts
react-django/app/: views.py
react-django/app/static/js/: main.064a3ec8.js  main.064a3ec8.js.map  main.d3daf0d5.js  main.d3daf0d5.js.map
react-django/app/templates/: home.html
react-django/backend/: settings.py  urls.py
react-django/backend/templates/: base.html  index.html
react-django/src/: App.tsx  ThemeProviderWrapper.tsx  index.tsx  theme.ts
react-django/src/components/: AboutComponent.tsx  FooterComponent.tsx  HeaderComponent.tsx  HomeBannerComponent.tsx  ProjectsComponent.tsx
react-django/src/pages/: Home.tsx
web/src/: index.html
