[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ricardoAlmeida <minef0rtter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
django = "^5.1.2"
python = "^3.12"
django-unfold = "^0.40.0"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
